--- a/src/css/main.less
+++ b/src/css/main.less
@@ -26,8 +26,9 @@
       user-select: none;
   }
   
- 
-  /* When clicked on, strike out text */
+ul li.checked {
+    text-decoration: line-through;
+}
   ul li label.checked {
       text-decoration: line-through;
   }
