--- a/src/css/main.less
+++ b/src/css/main.less
@@ -32,7 +32,10 @@ ul li.checked {
   ul li label.checked {
       text-decoration: line-through;
   }
-
+ul li label {
+    font-family:Roboto;
+    font-weight: 200;
+}
   /* Add a "checked" mark when clicked on */
   /* ul li.checked::before {
       content: '';
