--- a/src/css/main.less
+++ b/src/css/main.less
@@ -36,6 +36,10 @@ ul li label * {
     font-family:Roboto;
     font-weight: 200;
 }
+.todo-item-title {
+    font-family: Roboto;
+    font-weight: 200;
+}
   /* Add a "checked" mark when clicked on */
   /* ul li.checked::before {
       content: '';
