--- a/src/css/main.less
+++ b/src/css/main.less
@@ -58,9 +58,10 @@ ul li label * {
   /* Style the header */
   .header {
     background-color: #66cc00;
-    padding: 10px 10px 20px 10px;
+    padding: 10px;
     color: white;
     text-align: center;
+    margin-bottom: 0px;
   }
   
   /* Clear floats after the header */
