--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,170 +1,201 @@
 /* Include the padding and border in an element's total width and height */
+
 * {
     box-sizing: border-box;
-    font-family:Roboto;
-    font-weight: 200;
-  }
-  
-  /* Remove margins and padding from the list */
-  ul {
-      margin: 0;
-      padding: 0;
-  }
-  
-  /* Style the list items */
-  ul li {
-      cursor: pointer;
-      position: relative;
-      padding: 6px 8px 12px 0px;
-      background: #fff;
-      transition: 0.2s;
-      font-size: 1em;
-      /* make the list items unselectable */
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-  }
-  
-ul li.checked {
-    text-decoration: line-through;
-}
-  ul li label.checked {
-      text-decoration: line-through;
-  }
-ul li label * {
-    font-family:Roboto;
-    font-weight: 200;
-}
-.todo-item-title {
     font-family: Roboto;
     font-weight: 200;
 }
-  
-  
-  /* Style the close button */
-  .close {
-      position: absolute;
-      right: 0;
-      top: 0;
-      padding: 12px 16px 12px 16px;
-  }
-  
-  .close:hover {
-      background-color: #66cc00;
-      color: white;
-  }
-  
-  /* Style the header */
-  .header {
+
+.header {
     background-color: #66cc00;
     padding: 10px;
     color: white;
     text-align: center;
     margin-bottom: 0px;
-  }
-  
-  /* Clear floats after the header */
-  .header:after {
-      content: "";
-      display: table;
-      clear: both;
-  }
-  
-  /* Style the input */
-  input {
-      margin: 0;
-      border: none;
-      border-radius: 0;
-      width: 75%;
-      padding: 10px;
-      float: left;
-      font-size: 16px;
-  }
- 
-  /* Style the "Add" button */
-  .addBtn {
-      padding: 10px;
-      width: 25%;
-      background: #d9d9d9;
-      color: #555;
-      float: left;
-      text-align: center;
-      font-size: 16px;
-      cursor: pointer;
-      transition: 0.3s;
-      border-radius: 0;
-  }
-  
-  .addBtn:hover {
-      background-color: #bbb;
-  }
-/* Customize the label (the checkbox-container) */
-.checkbox-container {
-  width: auto;
- /* float: left;*/
-  margin-right: 10px;
-  font-family:Roboto;
-    font-weight: 200;
-  display: block;
-  position: relative;
-  padding-left: 35px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.header:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.footer {
+    background-color: #66cc00;
+    padding: 10px;
+    color: white;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+/* Clear floats after the footer */
+
+.footer:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.content {
+    position: relative;
+    border: 1px solid #000000;
+    width: 100%;
+    height: calc(100% - 80px);
+    top: 70px;
+    overflow-y: auto;
+}
+
+/* Remove margins and padding from the list */
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+/* Style the list items */
+
+ul li {
     cursor: pointer;
-  font-size: 14px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
- 
+    position: relative;
+    padding: 6px 8px 12px 0px;
+    background: #fff;
+    transition: 0.2s;
+    font-size: 1em;
+    /* make the list items unselectable */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+ul li.checked {
+    text-decoration: line-through;
+}
+
+ul li label.checked {
+    text-decoration: line-through;
+}
+
+/* Style the close button */
+
+.close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+}
+
+.close:hover {
+    background-color: #66cc00;
+    color: white;
+}
+
+/* Style the input */
+
+input {
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    width: 75%;
+    padding: 10px;
+    float: left;
+    font-size: 16px;
+}
+
+/* Style the "Add" button */
+
+.addBtn {
+    padding: 10px;
+    width: 25%;
+    background: #d9d9d9;
+    color: #555;
+    float: left;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 0;
+}
+
+.addBtn:hover {
+    background-color: #bbb;
+}
+
+/* Customize the label (the checkbox-container) */
+
+.checkbox-container {
+    width: auto;
+    /* float: left;*/
+    margin-right: 10px;
+    font-family: Roboto;
+    font-weight: 200;
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    cursor: pointer;
+    font-size: 14px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 /* Hide the browser's default checkbox */
+
 .checkbox-container input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
 }
 
 /* Create a custom checkbox */
+
 .checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 20px;
-  width: 20px;
-  background-color: #eee;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
 }
 
-/* When the checkbox is checked, add a blue background */
-.checkbox-container input:checked ~ .checkmark {
-  background-color: #66cc00;
+/* When the checkbox is checked, add a green background */
 
+.checkbox-container input:checked~.checkmark {
+    background-color: #66cc00;
 }
+
 /* Create the checkmark/indicator (hidden when not checked) */
+
 .checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
+    content: "";
+    position: absolute;
+    display: none;
 }
 
 /* Show the checkmark when checked */
-.checkbox-container input:checked ~ .checkmark:after {
-  display: block;
- 
+
+.checkbox-container input:checked~.checkmark:after {
+    display: block;
 }
 
 /* Style the checkmark/indicator */
+
 .checkbox-container .checkmark:after {
-  left: 7px;
-  top: 3px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-  
+    left: 7px;
+    top: 3px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
