--- a/src/css/main.less
+++ b/src/css/main.less
@@ -5,20 +5,22 @@
     font-family: Roboto;
     font-weight: 200;
 }
-body{
-  margin:0;
+
+body {
+    margin: 0;
 }
+
 .header {
-  position: fixed;
-  background-color: #6c0;
-  padding: 10px;
-  color: #fff;
-  text-align: center;
-  margin-bottom: 0;
-  top: 0;
-  width: 100%;
-  z-index: 100;
-  margin-top: 0px;
+    position: fixed;
+    background-color: #6c0;
+    padding: 10px;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 0;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    margin-top: 0px;
 }
 
 .header:after {
@@ -33,7 +35,6 @@ body{
     padding: 10px;
     color: white;
     text-align: center;
-   
     bottom: 0;
     width: 100%;
 }
@@ -46,15 +47,18 @@ body{
     clear: both;
 }
 
-.content {
-  position: absolute;
-  width: 100%;
-  height: calc(100% - 125px);
-  top: 45px;
-  overflow-y: visible;
-  padding:10px 0px;
+.spacer {
+    width: 100%;
+    height: 50px;
 }
 
+.content {
+    position: absolute;
+    width: 100%;
+    height: ~"calc(100% - 110px)"; // top: 45px;
+    overflow-y: visible;
+    padding: 10px 0px;
+}
 
 /* Remove margins and padding from the list */
 
