--- a/src/css/main.less
+++ b/src/css/main.less
@@ -58,6 +58,7 @@ body {
     height: ~"calc(100% - 110px)"; // top: 45px;
     overflow-y: visible;
     padding: 10px 0px;
+    overflow-y: scroll;
 }
 
 /* Remove margins and padding from the list */
