--- a/src/css/main.less
+++ b/src/css/main.less
@@ -232,22 +232,22 @@ input {
             animation-timing-function: ease-in-out;
             transform-origin: center center;
             &:nth-child(1) {
-                stroke: #ffc114;
+                stroke: #5F6D9C ;
                 stroke-dasharray: 50;
                 animation-delay: -0.2s;
             }
             &:nth-child(2) {
-                stroke: #ff5248;
+                stroke: #6196D0  ;
                 stroke-dasharray: 100;
                 animation-delay: -0.4s;
             }
             &:nth-child(3) {
-                stroke: #19cdca;
+                stroke: #C81414 ;
                 stroke-dasharray: 180;
                 animation-delay: -0.6s;
             }
             &:nth-child(4) {
-                stroke: #4e88e1;
+                stroke: #66CC00  ;
                 stroke-dasharray: 350;
                 stroke-dashoffset: -100;
                 animation-delay: -0.8s;
