updated page loader style

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -212,12 +212,13 @@ input {
 }
 
 .page-loader {
+  border: 1px solid #000;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 87vh; // ~"calc(50%)"; // top: 45px;  
+    height:  ~"calc(100% - 110px)";
     svg {
         width: 150px;
         height: 150px;
