popup save dialog

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -102,7 +102,7 @@ ul li label.checked {
 }
 
 .close:hover {
-    background-color: #66cc00;
+    // background-color: #66cc00;
     color: white;
 }
 
@@ -209,6 +209,10 @@ input {
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+
+    button.close{
+        position: relative;
+    }
 
 .page-loader {
   margin:0;
