--- a/src/css/main.less
+++ b/src/css/main.less
@@ -21,6 +21,15 @@ body {
     width: 100%;
     z-index: 100;
     margin-top: 0px;
+    font-family: Roboto;
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.25;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff; 
 }
 
 .header:after {
@@ -215,7 +224,7 @@ button.close {
 }
 
 #confirm {
-    background-color: #6c0;
+    background-color: #66CC00;
 }
 
 .page-loader {
