Repolisihig checklist appearnce for mobile

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -29,6 +29,10 @@ body {
     clear: both;
 }
 
+.h2-title {
+    font-size: 16px;
+}
+
 .footer {
     position: fixed;
     background-color: #66cc00;
@@ -49,7 +53,7 @@ body {
 
 .spacer {
     width: 100%;
-    height: 50px;
+    height: 40px;
 }
 
 .content {
@@ -115,7 +119,7 @@ input {
     width: 75%;
     padding: 10px;
     float: left;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 /* Style the "Add" button */
@@ -141,7 +145,7 @@ input {
 
 .checkbox-container {
     width: auto;
-    margin-right: 10px;
+    margin-right: 30px;
     font-family: Roboto;
     font-weight: 200;
     display: block;
@@ -173,6 +177,7 @@ input {
     left: 0;
     height: 20px;
     width: 20px;
+    margin-top: 6px;
     background-color: #eee;
 }
 
@@ -216,6 +221,7 @@ button.close {
 
 #confirm {
     background-color: #6c0;
+    border: 1px solid  #6c0;
 }
 
 .page-loader {
@@ -268,4 +274,7 @@ button.close {
             }
         }
     }
+}
+#todo {
+    padding-bottom:13px;
 }
