I want to see how many open tasks I have

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -303,3 +303,25 @@ button.close {
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
 }
+
+#table {
+    display: table;
+    width: 100%;
+    vertical-align: middle;
+}
+
+.tr {
+    display: table-row;
+}
+
+.td {
+    display: table-cell;
+    width: 50%;
+}
+.checklist-title {
+    text-align: left;
+    padding-left:25px
+}
+.checklist-counter {
+    text-align: right;
+}
